fix: #993: adjust/reduce z-indexes for modals

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -80,6 +80,6 @@ $zindex: (
   dropdown: 200,
   uploadbar-content: 200,
   hoverbox: 500,
-  overlay: 10000,
-  popup: 100000,
+  modal_bg: 10000,
+  modal: 10020,
 )
